update index.html and style.css and fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -954,7 +954,6 @@ div.language ul li {
     list-style: none;
     padding-bottom: 5em;
     width: 100%;
-    margin-left: 5%;
   }
 
   .contact-form li {
@@ -970,7 +969,7 @@ div.language ul li {
 
   input,
   textarea {
-    width: 70%;
+    width: 75%;
     padding: 3%;
     border-radius: 0.5em;
     border-color: white;
